--- a/tables/eficaciaBuilders.tex
+++ b/tables/eficaciaBuilders.tex
@@ -6,57 +6,57 @@
 \multicolumn{2}{c}{\multirow{3}{*}{\textbf{Cases}}} & \multicolumn{4}{c}{\textbf{Efectividad}} \\
 \cline{3-6}
 \multicolumn{2}{c}{} & \multicolumn{2}{c}{\textbf{GA}} & \multicolumn{2}{c}{\textbf{HC}}  \\
-\multicolumn{2}{c}{} & \textbf{\tiny{GE}} & \textbf{\tiny{RC}} & \textbf{\tiny{GE}} & \textbf{\tiny{RC}}  \\
+\multicolumn{2}{c}{} & \textbf{\tiny{FGE}} & \textbf{\tiny{FRC}} & \textbf{\tiny{FGE}} & \textbf{\tiny{FRC}}  \\
 \midrule
 \multicolumn{2}{c}{\textbf{NCL}} & 3  &   \cellcolor{gray!25} \emph{3.8} & 3 &  3 \\
 \multicolumn{2}{c}{\tiny \#API: 34} &  &   & &    \\
-\multicolumn{2}{c}{\tiny \#MetodosGeneradores: 3} &  &   & &    \\
+\multicolumn{2}{c}{\tiny \#MétodosGen: 3} &  &   & &    \\
 
 \midrule
 \multicolumn{2}{c}{\textbf{UFInd}}& 3 & 3  & 3  & 3      \\
 \multicolumn{2}{c}{\tiny \#API: 9} &  &   & &   \\
-\multicolumn{2}{c}{\tiny \#MetodosGeneradores: 3} &  &   & &    \\
+\multicolumn{2}{c}{\tiny \#MétodosGen: 3} &  &   & &    \\
 \midrule
 
 \multicolumn{2}{c}{\textbf{FHeap}}& 3 & 3  &  3 &  3   \\
 \multicolumn{2}{c}{\tiny \#API: 7} &  &   & &    \\
-\multicolumn{2}{c}{\tiny \#MetodosGeneradores: 3} &  &   & &    \\
+\multicolumn{2}{c}{\tiny \#MétodosGen: 3} &  &   & &    \\
 \midrule
 \multicolumn{2}{c}{\textbf{BTree}} & 2 & 2  &  2 &  2   \\
 \multicolumn{2}{c}{\tiny \#API: 8} &  &   & &    \\
-\multicolumn{2}{c}{\tiny \#MetodosGeneradores: 2} &  &   & &    \\
+\multicolumn{2}{c}{\tiny \#MétodosGen: 2} &  &   & &    \\
 \midrule
 \multicolumn{2}{c}{\textbf{BHeap}}& 3 & 3 &  3 &  3    \\
 \multicolumn{2}{c}{\tiny \#API: 10} &  &   & &   \\
-\multicolumn{2}{c}{\tiny \#MetodosGeneradores: 3} &  &   & &   \\
+\multicolumn{2}{c}{\tiny \#MétodosGen: 3} &  &   & &   \\
 \midrule
 \multicolumn{2}{c}{\textbf{Lits}} &  7 & 6 & 7 &  6    \\
 \multicolumn{2}{c}{\tiny \#API: 26} &  &   & &    \\
-\multicolumn{2}{c}{\tiny \#MetodosGeneradores: 6} &  &   & &   \\
+\multicolumn{2}{c}{\tiny \#MétodosGen: 6} &  &   & &   \\
 \midrule
 \multicolumn{2}{c}{\textbf{Sched.}} &  3 & 3   & 3  &  3 \\
 
 \multicolumn{2}{c}{\tiny \#API: 10} &  &   & &    \\
-\multicolumn{2}{c}{\tiny \#MetodosGeneradores: 3} &  &   & &    \\
+\multicolumn{2}{c}{\tiny \#MétodosGen: 3} &  &   & &    \\
 \midrule\multicolumn{2}{c}{\textbf{LinkedList}} & 2 &  2 &  2 &  2  \\
 \multicolumn{2}{c}{\tiny \#API: 67} &  &   & &   \\
-\multicolumn{2}{c}{\tiny \#MetodosGeneradores: 2} &  &   & &    \\
+\multicolumn{2}{c}{\tiny \#MétodosGen: 2} &  &   & &    \\
 \midrule
 \multicolumn{2}{c}{\textbf{TreeMap}} &  3 & \cellcolor{gray!25}\emph{5.60}  &  3  &  3   \\
 \multicolumn{2}{c}{\tiny \#API: 61} &  &   & &  \\
-\multicolumn{2}{c}{\tiny \#MetodosGeneradores: 3} &  &   & &  \\
+\multicolumn{2}{c}{\tiny \#MétodosGen: 3} &  &   & &  \\
 \midrule
 \multicolumn{2}{c}{\textbf{TreeSet}} &  3&\cellcolor{gray!25} \emph{3.20}  &  3 &  3  \\
 \multicolumn{2}{c}{\tiny \#API: 34} &  &   & &  \\
-\multicolumn{2}{c}{\tiny \#MetodosGeneradores: 3} &  &   & &   \\
+\multicolumn{2}{c}{\tiny \#MétodosGen: 3} &  &   & &   \\
 \midrule
 \multicolumn{2}{c}{\textbf{HashSet}} &  2 &\cellcolor{gray!25} \emph{3}  &  2 &  2 \\
 \multicolumn{2}{c}{\tiny \#API: 31} &  &   & &  \\
-\multicolumn{2}{c}{\tiny \#MetodosGeneradores: 2} &  &   & &    \\
+\multicolumn{2}{c}{\tiny \#MétodosGen: 2} &  &   & &    \\
 \midrule
 \multicolumn{2}{c}{\textbf{HashMap}} & \cellcolor{gray!25}2.60  & 2  &2   &2     \\
 \multicolumn{2}{c}{\tiny \#API: 45} &  &   & &    \\
-\multicolumn{2}{c}{\tiny \#MetodosGeneradores: 2} &  &   & &   \\
+\multicolumn{2}{c}{\tiny \#MétodosGen: 2} &  &   & &   \\
 \hline
 \end{tabular}
 
