--- a/tables/tableJPFBuilders1.tex
+++ b/tables/tableJPFBuilders1.tex
@@ -3,8 +3,8 @@
 \begin{tabular}{ c| l| c c c c c}
 \hline
 Class & Method & Scope &
-\multicolumn{2}{c}{\textsf{Builders}} &
-\multicolumn{2}{c}{\textsf{AllMethods}} \\
+\multicolumn{2}{c}{\textsf{MGO}} &
+\multicolumn{2}{c}{\textsf{API}} \\
 &&&
 \tiny{\textbf{states}} & \tiny{\textbf{time (S)}} &
 \tiny{\textbf{states}} & \tiny{\textbf{time (S)} }\\
